FIX to hide dropdown filters behind of header correctly. Avoiding conflicts with dialogs

--- a/frontend-service/src/views/_components/Layout/MainLayout/_components/Header/Header.module.scss
+++ b/frontend-service/src/views/_components/Layout/MainLayout/_components/Header/Header.module.scss
@@ -10,7 +10,7 @@
   background-color: var(--header-footer-bg);
   transition: 0.5s;
   box-shadow: var(--header-box-shadow);
-  z-index: 5002;
+  z-index: 3002;
   &.public {
     background-color: var(--public-page-header-bg);
   }
